Added fixed section

--- a/index.html
+++ b/index.html
@@ -105,12 +105,16 @@
 		<img src="http://farm9.staticflickr.com/8495/8368056521_6bd5fe32e7_h.jpg" />
 	</section>
 	
-<section id="four">
-		<div class="wrapper">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec turpis erat, fermentum vel felis vitae, interdum commodo risus. Aenean purus magna, lobortis vitae faucibus in, rhoncus et elit. Donec sollicitudin placerat condimentum. Cras sollicitudin tellus turpis, sit amet bibendum libero molestie faucibus. Praesent imperdiet nibh tincidunt, feugiat nunc a, tempus magna. Nulla facilisi. Phasellus in cursus purus. Nulla rutrum tortor ac ante feugiat pulvinar.</p>
+	<section id="four">
+	
+	</section>
 
-<p>Etiam pellentesque velit imperdiet aliquam dictum. Morbi in mauris dignissim, condimentum leo ac, venenatis nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque ultrices varius gravida. Etiam commodo sapien ac faucibus interdum. Phasellus ultricies dolor sit amet mauris porta ullamcorper. Integer lacinia eros non tortor hendrerit ultricies. Nulla viverra commodo lectus. Sed bibendum elementum auctor. Sed suscipit interdum ultrices. Phasellus tincidunt pellentesque ultrices.</p>
-		</div>
+	<section id="five">
+		<div class="wrapper">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec turpis erat, fermentum vel felis vitae, interdum commodo risus. Aenean purus magna, lobortis vitae faucibus in, rhoncus et elit. Donec sollicitudin placerat condimentum. Cras sollicitudin tellus turpis, sit amet bibendum libero molestie faucibus. Praesent imperdiet nibh tincidunt, feugiat nunc a, tempus magna. Nulla facilisi. Phasellus in cursus purus. Nulla rutrum tortor ac ante feugiat pulvinar.</p>
+
+			<p>Etiam pellentesque velit imperdiet aliquam dictum. Morbi in mauris dignissim, condimentum leo ac, venenatis nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque ultrices varius gravida. Etiam commodo sapien ac faucibus interdum. Phasellus ultricies dolor sit amet mauris porta ullamcorper. Integer lacinia eros non tortor hendrerit ultricies. Nulla viverra commodo lectus. Sed bibendum elementum auctor. Sed suscipit interdum ultrices. Phasellus tincidunt pellentesque ultrices.</p>
+			</div>
 	</section>
 
 	<footer>
