--- a/index.html
+++ b/index.html
@@ -77,22 +77,36 @@
 </head>
 
 <body>
-<div id="sticky"><img src="_/img/logo.png" /></div>
+	<div id="sticky">
+		<div id="sticky-content">
+			<h2><strong>Volume One: </strong><em>On Storytelling</em></h2>
+		</div>
+	</div>
+
 	<header class="intro">
 		<div class="wrapper intro-top">
 			<h1>Always <span class="be">be</span> Creating</h1>
 			<p class="info">is about not holding back. Always make things, never stop. We are engines of creation and our energy is limitless. Want to contribute? Please <a href="#">get in touch.</a></p>
 		</div>
+		<div  class="button">
+			<a href="#begin"><img src="_/img/button.png" /></a>
+		</div>
 	</header>
-	
+
+	<div id="slug"></div>
+	<div id="trigger" class="trigger"></div>
+	<div id="begin"></div>
 	<section id="one">
 		<div class="wrapper">
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec turpis erat, fermentum vel felis vitae, interdum commodo risus. Aenean purus magna, lobortis vitae faucibus in, rhoncus et elit. Donec sollicitudin placerat condimentum. Cras sollicitudin tellus turpis, sit amet bibendum libero molestie faucibus. Praesent imperdiet nibh tincidunt, feugiat nunc a, tempus magna. Nulla facilisi. Phasellus in cursus purus. Nulla rutrum tortor ac ante feugiat pulvinar.</p>
+			<p><img src="http://dailydropcap.com/images/I-1-cap.png" title="Daily Drop Cap by Jessica Hische" alt="I" class="dropcap" />'ve been thinking a lot on stories lately -- on writing them, reading them, telling them. I write a lot, when I really think about it, folders on my hard drive full of scraps, little blog posts; I fill journals and tuck folded poems into books to forget about and find later. And I'm good at this.</p>
 
-<p>Etiam pellentesque velit imperdiet aliquam dictum. Morbi in mauris dignissim, condimentum leo ac, venenatis nisl. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Pellentesque ultrices varius gravida. Etiam commodo sapien ac faucibus interdum. Phasellus ultricies dolor sit amet mauris porta ullamcorper. Integer lacinia eros non tortor hendrerit ultricies. Nulla viverra commodo lectus. Sed bibendum elementum auctor. Sed suscipit interdum ultrices. Phasellus tincidunt pellentesque ultrices.</p>
+			<p>I think we're all good at writing our thoughts. For a lot of people it's just sort of a fundamental part of living. It helps us decompress and "unpack" our day to write it down. What exist as a bunch of disparate thoughts in our minds come together when we give them language. This stream of consciousness writing certainly helps me make sense of my own thoughts and feelings.</p>
+			<div class="button">
+				<a href="#trigger-two"><img src="_/img/button.png" /></a>
+			</div>
 		</div>
 	</section>
-
+	<div id="trigger-two" class="trigger"></div>
 	<section id="two">
 		<div class="wrapper">
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec turpis erat, fermentum vel felis vitae, interdum commodo risus. Aenean purus magna, lobortis vitae faucibus in, rhoncus et elit. Donec sollicitudin placerat condimentum. Cras sollicitudin tellus turpis, sit amet bibendum libero molestie faucibus. Praesent imperdiet nibh tincidunt, feugiat nunc a, tempus magna. Nulla facilisi. Phasellus in cursus purus. Nulla rutrum tortor ac ante feugiat pulvinar.</p>
